# pidgin

./: .hgignore  .hgtags  .mailmap  .reviewboardrc  AUTHORS  COPYRIGHT  ChangeLog  ChangeLog.API  FUZZING  Makefile.am  README  bitbucket-pipelines.yml  configure.ac  convey.yaml  convey.yml  meson.build  meson_options.txt
doc/reference/finch/: finch-docs.xml  finch.toml.in  meson.build
doc/reference/libpurple/: code_contributions.md  code_contributions.xml  libpurple-docs.xml  libpurple.toml.in  mercurial.md  mercurial.xml  meson.build  plugin_i18n.md  plugin_i18n.xml  plugin_ids.xml  signals_account.md  signals_connection.xml  signals_conversation.md  signals_core.md  signals_notify.md  tut_c_plugins.md  tut_c_plugins.xml  ui_ops.xml
doc/reference/pidgin/: meson.build  pidgin-docs.xml  pidgin.toml.in  signals_gtkaccount.md  signals_gtkblist.md  signals_gtkconv.xml  urlmap.js
finch/: finch.c  finch.h.in  finchnotifications.c  gntaccount.c  gntaccount.h  gntblist.c  gntblist.h  gntconn.c  gntconn.h  gntconv.c  gntconv.h  gntdebug.c  gntdebug.h  gntidle.c  gntidle.h  gntlog.c  gntlog.h  gntmedia.c  gntmedia.h  gntmenuutil.c  gntmenuutil.h  gntnotify.c  gntnotify.h  gntplugin.c  gntplugin.h  gntpounce.c  gntpounce.h  gntprefs.c  gntprefs.h  gntrequest.c  gntrequest.h  gntroomlist.c  gntroomlist.h  gntsound.c  gntsound.h  gntstatus.c  gntstatus.h  gntui.c  gntui.h  gntxfer.c  (+4 more)
finch/plugins/: gntclipboard.c  gntgf.c  gnthistory.c  gnttinyurl.c  grouping.c  lastlog.c  meson.build
finch/plugins/gntgf/: gntgf.c  meson.build
finch/plugins/gnttinyurl/: gnttinyurl.c  meson.build
finch/plugins/grouping/: grouping.c
libpurple/: Makefile.am  Makefile.mingw  account.c  account.h  accounts.c  accounts.h  action.h  attention.h  blist.c  blistnode.c  blistnode.h  buddy.c  buddy.h  buddyicon.c  buddyicon.h  buddylist.c  buddylist.h  chat.c  chat.h  circularbuffer.c  circularbuffer.h  cmds.c  cmds.h  connection.c  connection.h  contact.c  contact.h  conversation.c  conversation.h  conversations.c  conversations.h  conversationtypes.c  conversationtypes.h  core.c  core.h  countingnode.c  countingnode.h  debug.c  debug.h  desktopitem.c  (+216 more)
libpurple/data/: im.pidgin.Purple.gschema.xml  meson.build
libpurple/example/: nullclient.c
libpurple/fuzzers/: Makefile.am  fuzz_html_to_xhtml.c  fuzz_jabber_caps.c  fuzz_jabber_id_new.c  fuzz_markup_strip_html.c  fuzz_mime.c  fuzz_xmlnode.c
libpurple/media/: backend-fs2.c  backend-fs2.h  backend-iface.c  backend-iface.h  candidate.c  candidate.h  codec.c  codec.h  enum-types.c  enum-types.h
libpurple/plugins/: autoaccept.c  buddynote.c  codeinline.c  debug_example.c  helloworld.c  idle.c  joinpart.c  log_reader.c  meson.build  notify_example.c  offlinemsg.c  one_time_password.c  pluginpref_example.c  psychic.c  purple-toast.c  signals-test.c  simple.c  statenotify.c  test-request-input.c
libpurple/plugins/autoaccept/: autoaccept.c  meson.build
libpurple/plugins/buddynote/: buddynote.c
libpurple/plugins/idle/: idle.c
libpurple/plugins/joinpart/: joinpart.c  meson.build
libpurple/plugins/keychain-access/: keychain-access.c
libpurple/plugins/keyrings/: internalkeyring.c  meson.build  secretservice.c  wincred.c
libpurple/plugins/kwallet/: purplekwallet.cpp
libpurple/plugins/libsecret/: libsecret.c  meson.build
libpurple/plugins/notification-sound/: meson.build  notification-sound.c
libpurple/plugins/psychic/: meson.build  psychic.c
libpurple/plugins/statenotify/: meson.build  statenotify.c
libpurple/plugins/wincred/: wincred.c
libpurple/protocols/: meson.build
libpurple/protocols/bonjour/: bonjour.c  xmpp.c  (+9 more)
libpurple/tests/: Makefile.am  fuzz_html_to_xhtml.c  fuzz_jabber_caps.c  fuzz_jabber_id_new.c  fuzz_markup_strip_html.c  fuzz_mime.c  fuzz_xmlnode.c  meson.build  test_account_manager.c  test_attention_type.c  test_contact.c  test_contact_manager.c  test_credential_manager.c  test_credential_provider.c  test_history_adapter.c  test_history_manager.c  test_markup.c  test_notification_manager.c  test_person.c  test_protocol_attention.c  test_protocol_xfer.c  test_purplepath.c  test_queued_output_stream.c  test_smiley.c  test_tags.c  test_trie.c  test_ui.c  test_util.c  test_xmlnode.c
libpurple/win32/: libc_interface.c  libc_interface.h  libc_internal.h  win32dep.c
pidgin/: Makefile.am  gtkaccount.c  gtkaccount.h  gtkblist-theme-loader.c  gtkblist-theme-loader.h  gtkblist-theme.c  gtkblist-theme.h  gtkblist.c  gtkblist.h  gtkcellrendererexpander.h  gtkconn.c  gtkconn.h  gtkconv.c  gtkconv.h  gtkconvwin.h  gtkdialogs.c  gtkdialogs.h  gtkdnd-hints.c  gtkdnd-hints.h  gtkicon-theme-loader.c  gtkicon-theme-loader.h  gtkicon-theme.c  gtkicon-theme.h  gtkidle.c  gtkidle.h  gtkimhtml.c  gtkinternal.h  gtkmedia.c  gtkmedia.h  gtknickcolors.h  gtknotify.c  gtknotify.h  gtkpluginpref.c  gtkpluginpref.h  gtkpounce.c  gtkpounce.h  gtkprefs.c  gtkprefs.h  gtkprivacy.c  gtkprivacy.h  (+155 more)
pidgin/data/: im.pidgin.Pidgin3.appdata.xml.in  im.pidgin.Pidgin3.desktop.in.in  meson.build  pidgin.appdata.xml.in
pidgin/glade/: meson.build  pidgin3.xml.in
pidgin/pixmaps/: meson.build
pidgin/plugins/: contact_priority.c  extplacement.c  gtk-signals-test.c  gtkbuddynote.c  history.c  iconaway.c  imgupload.c  mailchk.c  meson.build  notify.c  pidgininc.c  raw.c  relnot.c  screencap.c  spellchk.c  transparency.c  unity.c  vvconfig.c
pidgin/prefs/: pidginawaypage.c  pidginawaypage.h  pidginawayprefs.c  pidginawayprefs.h  pidginconversationprefs.c  pidginconversationprefs.h  pidgincredentialprefs.c  pidgincredentialprefs.h  pidgincredentialproviderrow.c  pidgincredentialproviderrow.h  pidgincredentialspage.c  pidgincredentialspage.h  pidginnetworkpage.c  pidginnetworkpage.h  pidginnetworkprefs.c  pidginnetworkprefs.h  pidginprefs.c  pidginprefs.h  pidginprefsinternal.h  pidginproxyprefs.c  pidginproxyprefs.h  pidginvvprefs.c  pidginvvprefs.h
pidgin/resources/: closebutton.ui  pidgin.gresource.xml  presenceicon.ui  proxyoptions.ui  statusprimitivechooser.ui
pidgin/win32/: gtkwin32dep.c  gtkwin32dep.h  prepare-workspace.sh  untar.c  winpidgin.c
(+462 files in other folders)
